# votess

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  make.sh
.github/workflows/: build.yml  joss.md  joss.yml  main.yml
benchmarks/: create_benchmarks.py  time_votess.py
cmake/: compiler_settings.cmake  dependencies.cmake  include.cmake  libsycl.hpp.in  options.cmake  unset_opts.cmake
include/: arguments.hpp  boundary.hpp  cc.hpp  dnn.hpp  error.hpp  heap.hpp  knn.hpp  libsycl.hpp  planes.hpp  sradius.hpp  status.hpp  utils.hpp  votess.hpp  xyzset.hpp
joss/: paper.bib  paper.md
python/: generate_tests.sh  test_boundary_generate.py  test_knn_generate.py  test_votess_generate.py
src/: CMakeLists.txt  boundary.ipp  cc.ipp  dnn.hpp  dnn.ipp  heap.ipp  knn.ipp  main.cpp  planes.ipp  sradius.ipp  status.ipp  utils.ipp  votess.ipp  xyzset.ipp
src/pybind11/: pyvotess.cpp
test/: CMakeLists.txt  arguments.cpp  boundary.cpp  dnn.cpp  heap.cpp  knn.cpp  main.cpp  planes.cpp  sradius.cpp  status.cpp  util.cpp  votess.cpp  xyzset.cpp
test/regression/: CMakeLists.txt  main.cpp
